--- a/GUI/settings.json
+++ b/GUI/settings.json
@@ -1,1 +1,239 @@
-{"themes": {"white": {"name": "White mode", "bgc": "white", "tc": "black", "theme": "SystemDefault"}, "black": {"name": "Black mode", "bgc": "black", "tc": "white", "theme": "Black"}, "pink": {"name": "Pink mode", "bgc": "pink", "tc": "black", "theme": "LightPurple"}, "green": {"name": "Green mode", "bgc": "lightblue", "tc": "black", "theme": "Green"}, "python": {"name": "Python mode", "bgc": "#3D7AAB", "tc": "#FFDE56", "theme": "Python"}, "yellow": {"name": "Yellow mode", "bgc": "yellow", "tc": "black", "theme": "SandyBeach"}, "brown": {"name": "Brown mode", "bgc": "brown", "tc": "black", "theme": "LightBrown13"}}, "theme": "white", "cardio_train.csv": {"encode": ["cholesterol", "gluc", "gender"], "label": "cardio", "mapping": {"age": {"min": 0, "max": 50000}, "height": {"min": 50, "max": 220}, "weight": {"min": 20, "max": 800}, "ap_hi": {"min": 50, "max": 200}, "ap_lo": {"min": 0, "max": 150}, "id": {"min": 0, "max": 1}, "smoke": {"min": 0, "max": 1}, "alco": {"min": 0, "max": 1}, "active": {"min": 0, "max": 1}, "cardio": {"min": 0, "max": 1}, "cholesterol_1": {"min": 0, "max": 1}, "cholesterol_2": {"min": 0, "max": 1}, "cholesterol_3": {"min": 0, "max": 1}, "gluc_1": {"min": 0, "max": 1}, "gluc_2": {"min": 0, "max": 1}, "gluc_3": {"min": 0, "max": 1}, "gender_1": {"min": 0, "max": 1}, "gender_2": {"min": 0, "max": 1}}}, "heart_failure_clinical_records_dataset.csv": {"encode": [], "label": "DEATH_EVENT", "mapping": {"age": {"min": 40, "max": 95}, "anaemia": {"min": 0, "max": 1}, "creatinine_phosphokinase": {"min": 23, "max": 7861}, "diabetes": {"min": 0, "max": 1}, "ejection_fraction": {"min": 14, "max": 80}, "high_blood_pressure": {"min": 0, "max": 1}, "platelets": {"min": 25000, "max": 850000}, "serum_creatinine": {"min": 0.5, "max": 9.4}, "serum_sodium": {"min": 113, "max": 148}, "sex": {"min": 0, "max": 1}, "smoking": {"min": 0, "max": 1}, "time": {"min": 4, "max": 285}, "DEATH_EVENT": {"min": 0, "max": 1}}}, "heart.csv": {"encode": [], "label": "DEATH_EVENT", "mapping": {"Age": {"min": 0, "max": 50000}, "Sex": {"min": 1, "max": 2}, "ChestPainType": {"min": 50, "max": 220}, "RestingBP": {"min": 20, "max": 800}, "Cholesterol": {"min": 50, "max": 200}, "FastingBS": {"min": 0, "max": 150}, "RestingECG": {"min": 1, "max": 3}, "MaxHR": {"min": 1, "max": 3}, "ExerciseAngina": {"min": 0, "max": 1}, "Oldpeak": {"min": 0, "max": 1}, "ST_Slope": {"min": 0, "max": 1}, "HeartDisease": {"min": 0, "max": 0}}}, "default save folder": "", "dataset": "C:/Users/Mathi/OneDrive - Corderius College/2021-2022/PWS/Cardiovascular Disease dataset/cardio_train.csv"}
+{
+    "themes": {
+        "white": {
+            "name": "White mode",
+            "bgc": "white",
+            "tc": "black",
+            "theme": "SystemDefault"
+        },
+        "black": {
+            "name": "Black mode",
+            "bgc": "black",
+            "tc": "white",
+            "theme": "Black"
+        },
+        "pink": {
+            "name": "Pink mode",
+            "bgc": "pink",
+            "tc": "black",
+            "theme": "LightPurple"
+        },
+        "green": {
+            "name": "Green mode",
+            "bgc": "lightblue",
+            "tc": "black",
+            "theme": "Green"
+        },
+        "python": {
+            "name": "Python mode",
+            "bgc": "#3D7AAB",
+            "tc": "#FFDE56",
+            "theme": "Python"
+        },
+        "yellow": {
+            "name": "Yellow mode",
+            "bgc": "yellow",
+            "tc": "black",
+            "theme": "SandyBeach"
+        },
+        "brown": {
+            "name": "Brown mode",
+            "bgc": "brown",
+            "tc": "black",
+            "theme": "LightBrown13"
+        }
+    },
+    "theme": "white",
+    "cardio_train.csv": {
+        "encode": [],
+        "label": "cardio",
+        "mapping": {
+            "age": {
+                "min": 0,
+                "max": 50000
+            },
+            "height": {
+                "min": 50,
+                "max": 220
+            },
+            "weight": {
+                "min": 20,
+                "max": 800
+            },
+            "ap_hi": {
+                "min": 50,
+                "max": 200
+            },
+            "ap_lo": {
+                "min": 0,
+                "max": 150
+            },
+            "id": {
+                "min": 0,
+                "max": 1
+            },
+            "smoke": {
+                "min": 0,
+                "max": 1
+            },
+            "alco": {
+                "min": 0,
+                "max": 1
+            },
+            "active": {
+                "min": 0,
+                "max": 1
+            },
+            "cardio": {
+                "min": 0,
+                "max": 1
+            },
+            "cholesterol_1": {
+                "min": 0,
+                "max": 1
+            },
+            "cholesterol_2": {
+                "min": 0,
+                "max": 1
+            },
+            "cholesterol_3": {
+                "min": 0,
+                "max": 1
+            },
+            "gluc_1": {
+                "min": 0,
+                "max": 1
+            },
+            "gluc_2": {
+                "min": 0,
+                "max": 1
+            },
+            "gluc_3": {
+                "min": 0,
+                "max": 1
+            },
+            "gender_1": {
+                "min": 0,
+                "max": 1
+            },
+            "gender_2": {
+                "min": 0,
+                "max": 1
+            }
+        }
+    },
+    "heart_failure_clinical_records_dataset.csv": {
+        "encode": [],
+        "label": "DEATH_EVENT",
+        "mapping": {
+            "age": {
+                "min": 40,
+                "max": 95
+            },
+            "anaemia": {
+                "min": 0,
+                "max": 1
+            },
+            "creatinine_phosphokinase": {
+                "min": 23,
+                "max": 7861
+            },
+            "diabetes": {
+                "min": 0,
+                "max": 1
+            },
+            "ejection_fraction": {
+                "min": 14,
+                "max": 80
+            },
+            "high_blood_pressure": {
+                "min": 0,
+                "max": 1
+            },
+            "platelets": {
+                "min": 25000,
+                "max": 850000
+            },
+            "serum_creatinine": {
+                "min": 0.5,
+                "max": 9.4
+            },
+            "serum_sodium": {
+                "min": 113,
+                "max": 148
+            },
+            "sex": {
+                "min": 0,
+                "max": 1
+            },
+            "smoking": {
+                "min": 0,
+                "max": 1
+            },
+            "time": {
+                "min": 4,
+                "max": 285
+            },
+            "DEATH_EVENT": {
+                "min": 0,
+                "max": 1
+            }
+        }
+    },
+    "heart.csv": {
+        "encode": [],
+        "label": "DEATH_EVENT",
+        "mapping": {
+            "Age": {
+                "min": 0,
+                "max": 50000
+            },
+            "Sex": {
+                "min": 1,
+                "max": 2
+            },
+            "ChestPainType": {
+                "min": 50,
+                "max": 220
+            },
+            "RestingBP": {
+                "min": 20,
+                "max": 800
+            },
+            "Cholesterol": {
+                "min": 50,
+                "max": 200
+            },
+            "FastingBS": {
+                "min": 0,
+                "max": 150
+            },
+            "RestingECG": {
+                "min": 1,
+                "max": 3
+            },
+            "MaxHR": {
+                "min": 1,
+                "max": 3
+            },
+            "ExerciseAngina": {
+                "min": 0,
+                "max": 1
+            },
+            "Oldpeak": {
+                "min": 0,
+                "max": 1
+            },
+            "ST_Slope": {
+                "min": 0,
+                "max": 1
+            },
+            "HeartDisease": {
+                "min": 0,
+                "max": 0
+            }
+        }
+    },
+    "default save folder": "",
+    "dataset": "C:/Users/Mathi/OneDrive - Corderius College/2021-2022/PWS/Cardiovascular Disease dataset/cardio_train.csv"
+}
