--- a/GUI/settings.json
+++ b/GUI/settings.json
@@ -235,5 +235,5 @@
         }
     },
     "default save folder": "",
-    "dataset": "C:/Users/Mathi/OneDrive - Corderius College/2021-2022/PWS/Cardiovascular Disease dataset/cardio_train.csv"
+    "dataset": ""
 }
